Add loaders and images

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 body {
   background-color: #efefef;
+  background-image: url('images/pattern_lg.png');
+  background-image: url('images/pattern_sm.png');
 }
 
 #content {
